test/invalid/binop_non_numeric.py
# Binary operation on non-numeric types
def main() -> None:
    x: str = "hello"
    y: int = x + 1
    print(y)
